# cobra-frames

./: .gitignore  .pre-commit-config.yaml  README.md  contextSBF-validation.html  dynaHate.trn.r60.gpt3socCont.csv  implHate.noSap.r60.gpt3socCont.csv  mAgr.r60.gpt3socCont.csv  populateSBFwithGPT3.sh  populateSBFwithGPT3.v0.py  populateSBFwithGPT3.v1.py  populateSBFwithGPT3.v2.py  populateSBFwithGPT3.v3.py  populateSBFwithGPT3.v4.py  populateSBFwithGPT3.v5.py  preCombineDatasets.py  promptExamples.v1.csv  promptExamples.v2.csv  requirements.txt  sbic.trn.r60.gpt3socCont.csv  setup.cfg
filters/: README.md  few_shot_filter.py  finetuned_filter.py  flan_t5_ex.py  process_annotated_data_per_line.py  train_t5.py
frozen_lm_qa/: pytorch_model.py
mturk_interface/: contextSBF-advContext.html  contextSBF-context.html  contextSBF-sensitivity.html  contextSBF-validation-IRB.html  contextSBF-validation-qual.html  contextSBF-validation.html  ex.html
sbf_modeling/: __init__.py  base.py  evaluation_utils.py  explain_model.py  gin_utils.py  inference.py  metrics.py  prompt_templates.py  reward_model.py  train.py
scripts/: few_shot_filters.sh  finetune_filters.sh  generate_rare_contexts.sh  mturk_analysis.sh  mturk_analysis_sen.sh  populateSBF_AdvContexts_GPT3.sh  populateSBF_contexts_GPT3.sh  populateSBF_explanations_GPT3.sh  populateSBFwithGPT3.sh  populateSBFwithGPT3_large_scale.sh  populateSBFwithGPT3_large_scale_mosaic.sh  populateSBFwithGPT3_large_scale_uw.sh  prepare_advContexts.sh  qualification.sh  scoring_annotators.sh
tools/: README.md  agreement.py  cal_qual_scores.py  (+9 more)
(+55 files in other folders)
